cmake_minimum_required(VERSION 3.8)
project(ros2_publisher)

# Enable warnings
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find required packages
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

# Create executable
add_executable(publisher_node src/publisher_node.cpp)

# Link dependencies
ament_target_dependencies(publisher_node rclcpp std_msgs)

# Install executable
install(TARGETS
  publisher_node
  DESTINATION lib/${PROJECT_NAME}
)

# Package export
ament_package()
